[gd_scene load_steps=7 format=3 uid="uid://c4meyla2in6jl"]

[ext_resource type="Script" path="res://scenes/options.gd" id="1_b0k6s"]
[ext_resource type="Theme" uid="uid://dd0p4mnkcs75l" path="res://theme/game_theme.tres" id="2_775ph"]
[ext_resource type="Texture2D" uid="uid://4j5cl7hp1fex" path="res://images/fondo.jpg" id="2_q62b5"]
[ext_resource type="LabelSettings" uid="uid://cvw0vam46hxrt" path="res://theme/title_label_settings.tres" id="4_hvjf5"]
[ext_resource type="LabelSettings" uid="uid://ceoaqidwo70xd" path="res://theme/text_label_settings.tres" id="5_m6pjx"]
[ext_resource type="Theme" uid="uid://dc6dlmiffd7ot" path="res://theme/buton_theme.tres" id="6_w3afv"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b0k6s")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_q62b5")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.507433, 0.35733, 0.110475, 0.454902)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 353.0
offset_top = 149.0
offset_right = 798.0
offset_bottom = 499.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(445, 0)
layout_mode = 2
theme_override_constants/separation = 48

[node name="OPTIONS" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_775ph")
theme_override_font_sizes/font_size = 64
text = "OPCIONES"
label_settings = ExtResource("4_hvjf5")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 32
theme_override_constants/v_separation = 32
columns = 2

[node name="Music" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_775ph")
theme_override_font_sizes/font_size = 48
text = "Música"
label_settings = ExtResource("5_m6pjx")

[node name="Music2" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(245, 0)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_775ph")
max_value = 1.0
step = 0.01
value = 0.5

[node name="SFX" type="Label" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("2_775ph")
theme_override_font_sizes/font_size = 48
text = "SFX
"
label_settings = ExtResource("5_m6pjx")

[node name="Sfx" type="HSlider" parent="MarginContainer/CenterContainer/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("2_775ph")
max_value = 1.0
step = 0.01
value = 0.5

[node name="Idiomas" type="OptionButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_775ph")
item_count = 3
selected = 0
popup/item_0/text = "Español"
popup/item_0/id = 0
popup/item_1/text = "English"
popup/item_1/id = 1
popup/item_2/text = "Català"
popup/item_2/id = 2

[node name="Back" type="Button" parent="MarginContainer/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_w3afv")
text = "VOLVER"

[connection signal="value_changed" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/Music2" to="." method="_on_music_value_changed"]
[connection signal="drag_ended" from="MarginContainer/CenterContainer/VBoxContainer/GridContainer/Sfx" to="." method="_on_sfx_drag_ended"]
[connection signal="item_selected" from="MarginContainer/CenterContainer/VBoxContainer/Idiomas" to="." method="_on_idiomas_item_selected"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
